--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- import JavaScript -->
+  <script defer src="index.js"></script>
+
+  <!-- import CSS -->
+  <link rel="stylesheet" href="index.css">
+
+  <title>PuppyBowl</title>
 </head>
+
 <body>
-    
+
+
+  <!-- form to add new players -->
+  <div id="new-player-form">
+    <img src="" alt="" /> 
+  </div>
+  <div id="player-info">
+    <h3>Basic Information</h3>
+    <p id="name"></p>
+    <p id="breed"></p>
+    <p id="status"></p>
+    <p id="teamId"></p>
+    <p id="cohortId"></p>
+  </div>
+
+  <!-- container for all players -->
+  <div id="all-players-container"></div>
+  <div id="new-puppy-bowl-player"></div>
+  <div id="puppy-bowl-participants"></div>
+
 </body>
+
 </html>
