--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 </head>
 
 <body>
-
+  <div class="grid-div">
+    <div class="content-container">
+      <header>
+        <h1>Puppy Bowl!</h1>
+      </header>
 
   <!-- form to add new players -->
-  <div id="new-player-form">
+  <!-- <div id="new-player-form">
     <img src="" alt="" /> 
   </div>
   <div id="player-info">
@@ -29,11 +33,11 @@
     <p id="status"></p>
     <p id="teamId"></p>
     <p id="cohortId"></p>
-  </div>
+  </div> -->
 
   <!-- container for all players -->
   <div id="all-players-container"></div>
-  <div id="new-puppy-bowl-player"></div>
+  <div id="new-player-form"></div>
   <div id="puppy-bowl-participants"></div>
 
 </body>
